# django-starter-template

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile.dev  LICENSE  Pipfile  Procfile  TODO.md  docker-compose.yml  fabfile.py  manage.py  pipsetup.py  pyproject.toml  railway.toml  readme.md  requirements.txt  requirements_to_freeze.txt  tox.ini
apps/: apps.py
apps/base/: models.py  tests.py  urls.py  views.py
apps/base/static/css/: base.css
apps/base/templates/base/: home.html  index.html
config/: asgi.py  supervisord.conf  urls.py  uwsgi.ini
config/settings/: base.py  development.py  production.py
config/static/css/: base.css
config/templates/: 403.html  404.html  500.html  base.html
project_name/: urls.py  wsgi.py
project_name/settings/: __init__.py  base.py  development.py  local.py  local_example.py  production.py
project_name/static/less/: app.less
project_name/templates/: 403.html  404.html  500.html  base.html
requirements/: base.txt  development.txt  production.txt
shaping_templeat/: __init__.py  urls.py  wsgi.py
shaping_templeat/settings/: __init__.py  base.py  development.py  production.py
shaping_templeat/static/css/: _bootstrap.css  app.css
shaping_templeat/static/js/: app.js
shaping_templeat/static/js/libs/react/: babel.js
shaping_templeat/static/less/: app.less
shaping_templeat/templates/: 403.html  404.html
